# vader5_shift_project

./: README.md  pyproject.toml
sample-configs/: lb_dpad_layer.json
tests/: test_layer_engine.py
vader_shift/: __init__.py  app.py  config.py  layer_engine.py  names.py  output.py  sdl3_input.py  state.py
