[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vader5-shift"
version = "0.1.0"
description = "Hold-based shift layers for the Flydigi Vader 5 Pro on Windows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "vgamepad>=0.1.0",
]
authors = [
  { name = "OmbreeTheAmazing" }
]

[project.scripts]
vader-shift = "vader_shift.__main__:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["vader_shift*"]
